# project1_Greku_Ivan_M-25255

./: .gitignore  Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
