[project]
name = "project1-greku-ivan-m-25255"
version = "0.1.0"
description = ""
authors = [
    {name = "Militans",email = "ivangreku48@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [
  { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
