[project]
name = "project1-greku-ivan-m-25255"
version = "0.1.0"
description = "Консольная игра 'Лабиринт сокровищ' (лабиринт, предметы, загадки, ловушки)."
authors = [
    {name = "Militans",email = "ivangreku48@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [
  { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)",
]
